pyfcstm/dsl/grammar/GrammarParser.g4
/*
 * GrammarParser.g4
 *
 * Overview
 * --------
 * This parser grammar consumes tokens produced by :mod:`GrammarLexer`. The
 * lexer owns all compact import-specific tokenization, especially selector
 * patterns and target templates that must remain whitespace-sensitive. The
 * parser therefore stays structural: it assembles FCSTM declarations, import
 * statements, mapping statements, and expressions without embedding
 * lexer-specific validation logic.
 *
 * Import support extends the existing DSL in three places:
 *
 * 1. Composite states may contain ``import`` statements alongside normal state,
 *    transition, lifecycle, and event declarations.
 * 2. Import blocks may contain ``def`` mappings and ``event`` mappings.
 * 3. The resulting AST retains all import syntax so later Python phases can
 *    resolve files, assemble modules, and rewrite variables or events.
 *
 * This grammar intentionally stops at syntax. Path resolution, recursive
 * loading, conflict detection, mapping precedence, and other assembly
 * semantics belong to later implementation phases in Python code.
 */
parser grammar GrammarParser;

options {
    tokenVocab = GrammarLexer;
}

// Entry points used by the public parsing helpers.
condition
    : cond_expression EOF
    ;

state_machine_dsl
    : def_assignment* state_definition EOF
    ;

// Top-level variable definitions that appear before the root state.
def_assignment
    : leading_doc=MULTILINE_COMMENT? variable_declaration deftype=(INT_TYPE | FLOAT_TYPE) var_name=ID
      (ASSIGN init_expression)? SEMI
    ;

variable_declaration
    : DEF
    | CONTROL
    | INPUT
    | PARAM
    | OUTPUT
    ;

// State-machine structural rules.
state_definition
    : leading_doc=MULTILINE_COMMENT? pseudo=PSEUDO? STATE state_id=ID (NAMED extra_name=STRING)? SEMI
        # leafStateDefinition
    | leading_doc=MULTILINE_COMMENT? pseudo=PSEUDO? STATE state_id=ID (NAMED extra_name=STRING)? LBRACE
      state_inner_statement* RBRACE
        # compositeStateDefinition
    ;

transition_definition
    : leading_doc=MULTILINE_COMMENT? INIT_MARKER ARROW to_state=ID (DOT history_marker)? entry_combo_transition_trigger?
      (SEMI | EFFECT LBRACE operational_statement_set RBRACE)
        # entryTransitionDefinition
    | leading_doc=MULTILINE_COMMENT? from_state=ID ARROW to_state=ID (DOT history_marker)? combo_transition_trigger?
      (SEMI | EFFECT LBRACE operational_statement_set RBRACE)
        # normalTransitionDefinition
    | leading_doc=MULTILINE_COMMENT? from_state=ID ARROW INIT_MARKER combo_transition_trigger?
      (SEMI | EFFECT LBRACE operational_statement_set RBRACE)
        # exitTransitionDefinition
    ;

entry_combo_transition_trigger
    : COLONCOLON entry_chain_combo_trigger
    | COLON IF LBRACK cond_expression RBRACK
    | COLON chain_combo_trigger
    ;

entry_chain_combo_trigger
    : entry_chain_combo_leading_guard* combo_event_term (PLUS entry_chain_combo_trigger_term)*
    ;

entry_chain_combo_leading_guard
    : combo_guard_term PLUS
    ;

entry_chain_combo_trigger_term
    : combo_event_term
    | combo_guard_term
    ;

combo_transition_trigger
    : COLONCOLON local_combo_trigger
    | COLON IF LBRACK cond_expression RBRACK
    | COLON chain_combo_trigger
    ;

local_combo_trigger
    : local_combo_leading_guard* local_combo_event_term (PLUS local_combo_trigger_term)*
    ;

local_combo_leading_guard
    : combo_guard_term PLUS
    ;

local_combo_trigger_term
    : local_combo_event_term
    | combo_guard_term
    ;

local_combo_event_term
    : ID
    ;

chain_combo_trigger
    : chain_combo_guard_alias
    | combo_trigger_term PLUS combo_trigger_term (PLUS combo_trigger_term)*
    | combo_event_term
    ;

chain_combo_guard_alias
    : combo_guard_term
    ;

combo_trigger_term
    : combo_event_term
    | combo_guard_term
    ;

combo_event_term
    : chain_id
    ;

combo_guard_term
    : LBRACK cond_expression RBRACK
    ;

transition_force_definition
    : leading_doc=MULTILINE_COMMENT? BANG from_state=ID ARROW to_state=ID (DOT history_marker)?
      (COLONCOLON from_id=ID | COLON chain_id | COLON IF LBRACK cond_expression RBRACK)?
      SEMI
        # normalForceTransitionDefinition
    | leading_doc=MULTILINE_COMMENT? BANG from_state=ID ARROW INIT_MARKER
      (COLONCOLON from_id=ID | COLON chain_id | COLON IF LBRACK cond_expression RBRACK)?
      SEMI
        # exitForceTransitionDefinition
    | leading_doc=MULTILINE_COMMENT? BANG STAR ARROW to_state=ID (DOT history_marker)?
      ((COLONCOLON | COLON) chain_id | COLON IF LBRACK cond_expression RBRACK)?
      SEMI
        # normalAllForceTransitionDefinition
    | leading_doc=MULTILINE_COMMENT? BANG STAR ARROW INIT_MARKER
      ((COLONCOLON | COLON) chain_id | COLON IF LBRACK cond_expression RBRACK)?
      SEMI
        # exitAllForceTransitionDefinition
    ;

history_marker
    : HISTORY_SHALLOW_MARKER
    | HISTORY_DEEP_MARKER
    ;

history_definition
    : leading_doc=MULTILINE_COMMENT? history_marker ARROW history_default_path SEMI
    ;

history_default_path
    : ID (DOT ID)*
    ;

enter_definition
    : leading_doc=MULTILINE_COMMENT? ENTER (func_name=ID)? LBRACE operational_statement_set RBRACE
        # enterOperations
    // A leading documentation block is the canonical spelling.  Its optional
    // name preserves the existing anonymous-abstract form, while the separate
    // no-document alternative below keeps bare ``enter abstract;`` invalid.
    | leading_doc=MULTILINE_COMMENT ENTER ABSTRACT (func_name=ID)? SEMI
        # enterAbstractFunc
    | ENTER ABSTRACT func_name=ID SEMI
        # enterAbstractFunc
    | leading_doc=MULTILINE_COMMENT? ENTER ABSTRACT (func_name=ID)? raw_doc=MULTILINE_COMMENT
        # enterAbstractFunc
    | leading_doc=MULTILINE_COMMENT? ENTER (func_name=ID)? REF chain_id SEMI
        # enterRefFunc
    ;

exit_definition
    : leading_doc=MULTILINE_COMMENT? EXIT (func_name=ID)? LBRACE operational_statement_set RBRACE
        # exitOperations
    | leading_doc=MULTILINE_COMMENT EXIT ABSTRACT (func_name=ID)? SEMI
        # exitAbstractFunc
    | EXIT ABSTRACT func_name=ID SEMI
        # exitAbstractFunc
    | leading_doc=MULTILINE_COMMENT? EXIT ABSTRACT (func_name=ID)? raw_doc=MULTILINE_COMMENT
        # exitAbstractFunc
    | leading_doc=MULTILINE_COMMENT? EXIT (func_name=ID)? REF chain_id SEMI
        # exitRefFunc
    ;

during_definition
    : leading_doc=MULTILINE_COMMENT? DURING aspect=(BEFORE | AFTER)? (func_name=ID)? LBRACE operational_statement_set RBRACE
        # duringOperations
    | leading_doc=MULTILINE_COMMENT DURING aspect=(BEFORE | AFTER)? ABSTRACT (func_name=ID)? SEMI
        # duringAbstractFunc
    | DURING aspect=(BEFORE | AFTER)? ABSTRACT func_name=ID SEMI
        # duringAbstractFunc
    | leading_doc=MULTILINE_COMMENT? DURING aspect=(BEFORE | AFTER)? ABSTRACT (func_name=ID)? raw_doc=MULTILINE_COMMENT
        # duringAbstractFunc
    | leading_doc=MULTILINE_COMMENT? DURING aspect=(BEFORE | AFTER)? (func_name=ID)? REF chain_id SEMI
        # duringRefFunc
    ;

during_aspect_definition
    : leading_doc=MULTILINE_COMMENT? SHIFT_RIGHT DURING aspect=(BEFORE | AFTER) (func_name=ID)? LBRACE operational_statement_set RBRACE
        # duringAspectOperations
    | leading_doc=MULTILINE_COMMENT SHIFT_RIGHT DURING aspect=(BEFORE | AFTER) ABSTRACT (func_name=ID)? SEMI
        # duringAspectAbstractFunc
    | SHIFT_RIGHT DURING aspect=(BEFORE | AFTER) ABSTRACT func_name=ID SEMI
        # duringAspectAbstractFunc
    | leading_doc=MULTILINE_COMMENT? SHIFT_RIGHT DURING aspect=(BEFORE | AFTER) ABSTRACT (func_name=ID)? raw_doc=MULTILINE_COMMENT
        # duringAspectAbstractFunc
    | leading_doc=MULTILINE_COMMENT? SHIFT_RIGHT DURING aspect=(BEFORE | AFTER) (func_name=ID)? REF chain_id SEMI
        # duringAspectRefFunc
    ;

event_definition
    : leading_doc=MULTILINE_COMMENT? EVENT event_name=ID (NAMED extra_name=STRING)? SEMI
    ;

// Import declarations are legal only inside composite states. The lexer has
// already enforced the compact selector/template token forms where required.
import_statement
    : IMPORT import_path=STRING AS state_alias=ID (NAMED extra_name=STRING)?
      (LBRACE import_mapping_statement* RBRACE | SEMI)
    ;

import_mapping_statement
    : import_variable_mapping
    | import_event_mapping
    | SEMI
    ;

import_variable_mapping
    : keyword=(VAR | DEF) import_def_selector ARROW import_def_target_template SEMI
    ;

import_def_selector
    : STAR
        # importDefFallbackSelector
    | LBRACE selector_items+=ID (COMMA selector_items+=ID)* RBRACE
        # importDefSetSelector
    | selector_pattern=IMPORT_DEF_SELECTOR_PATTERN
        # importDefPatternSelector
    | selector_name=ID
        # importDefExactSelector
    ;

import_def_target_template
    : target_text=ID
    | target_text=IMPORT_DEF_TARGET_TEMPLATE
    | target_text=STAR
    ;

import_event_mapping
    : EVENT source_event=chain_id ARROW target_event=chain_id (NAMED extra_name=STRING)? SEMI
    ;

// Operational blocks used by enter/during/exit/effect bodies.
operation_assignment
    : ID ASSIGN num_expression SEMI
    ;

operation_block
    : LBRACE operational_statement_set RBRACE
    ;

if_statement
    : IF LBRACK cond_expression RBRACK operation_block
      (ELSE IF LBRACK cond_expression RBRACK operation_block)*
      (ELSE operation_block)?
    ;

operational_statement
    : operation_assignment
    | if_statement
    | SEMI
    ;

operational_statement_set
    : operational_statement*
    ;

state_inner_statement
    : state_definition
    | transition_definition
    | transition_force_definition
    | history_definition
    | enter_definition
    | during_definition
    | exit_definition
    | during_aspect_definition
    | event_definition
    | import_statement
    | SEMI
    ;

// Legacy entry points that remain used by parser helpers and tests.
operation_program
    : operational_assignment* EOF
    ;

preamble_program
    : preamble_statement* EOF
    ;

preamble_statement
    : initial_assignment
    | constant_definition
    ;

initial_assignment
    : ID DECLARE_ASSIGN init_expression SEMI
    ;

constant_definition
    : ID ASSIGN init_expression SEMI
    ;

operational_assignment
    : ID DECLARE_ASSIGN num_expression SEMI
    ;

// Shared expression rules reused by conditions, initialization, and runtime
// operation blocks.
generic_expression
    : num_expression
    | cond_expression
    ;

init_expression
    : LPAREN init_expression RPAREN
        # parenExprInit
    | num_literal
        # literalExprInit
    | math_const
        # mathConstExprInit
    | op=(PLUS | MINUS) init_expression
        # unaryExprInit
    | <assoc=right> init_expression op=POW init_expression
        # binaryExprInit
    | init_expression op=(STAR | SLASH | PERCENT) init_expression
        # binaryExprInit
    | init_expression op=(PLUS | MINUS) init_expression
        # binaryExprInit
    | init_expression op=(SHIFT_LEFT | SHIFT_RIGHT) init_expression
        # binaryExprInit
    | init_expression op=AMP init_expression
        # binaryExprInit
    | init_expression op=CARET init_expression
        # binaryExprInit
    | init_expression op=PIPE init_expression
        # binaryExprInit
    | func_name=UFUNC_NAME LPAREN init_expression RPAREN
        # funcExprInit
    ;

num_expression
    : LPAREN num_expression RPAREN
        # parenExprNum
    | num_literal
        # literalExprNum
    | ID
        # idExprNum
    | math_const
        # mathConstExprNum
    | op=(PLUS | MINUS) num_expression
        # unaryExprNum
    | <assoc=right> num_expression op=POW num_expression
        # binaryExprNum
    | num_expression op=(STAR | SLASH | PERCENT) num_expression
        # binaryExprNum
    | num_expression op=(PLUS | MINUS) num_expression
        # binaryExprNum
    | num_expression op=(SHIFT_LEFT | SHIFT_RIGHT) num_expression
        # binaryExprNum
    | num_expression op=AMP num_expression
        # binaryExprNum
    | num_expression op=CARET num_expression
        # binaryExprNum
    | num_expression op=PIPE num_expression
        # binaryExprNum
    | func_name=UFUNC_NAME LPAREN num_expression RPAREN
        # funcExprNum
    | <assoc=right> LPAREN cond_expression RPAREN QUESTION num_expression COLON num_expression
        # conditionalCStyleExprNum
    ;

cond_expression
    : LPAREN cond_expression RPAREN
        # parenExprCond
    | bool_literal
        # literalExprCond
    | op=(BANG | NOT_KW) cond_expression
        # unaryExprCond
    | num_expression op=(LT | GT | LE | GE) num_expression
        # binaryExprFromNumCond
    | num_expression op=(EQ | NE) num_expression
        # binaryExprFromNumCond
    | cond_expression op=(EQ | NE | IFF_KW) cond_expression
        # binaryExprFromCondCond
    | cond_expression op=(LOGICAL_AND | AND_KW) cond_expression
        # binaryExprCond
    | cond_expression op=XOR_KW cond_expression
        # binaryExprCond
    | cond_expression op=(LOGICAL_OR | OR_KW) cond_expression
        # binaryExprCond
    | <assoc=right> cond_expression op=(IMPLIES | IMPLIES_KW) cond_expression
        # binaryExprCond
    | <assoc=right> LPAREN cond_expression RPAREN QUESTION cond_expression COLON cond_expression
        # conditionalCStyleCondNum
    ;

num_literal
    : INT
    | FLOAT
    | HEX_INT
    ;

bool_literal
    : TRUE
    | FALSE
    ;

math_const
    : PI_CONST
    | E_CONST
    | TAU_CONST
    ;

// Reusable dotted identifier path helper used by event mappings and refs.
chain_id
    : isabs=SLASH? ID (DOT ID)*
    ;
