pyfcstm/dsl/grammar/GrammarParser.py
# Generated from ./pyfcstm/dsl/grammar/GrammarParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class GrammarParser(Parser):
    grammarFileName = "GrammarParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'import'",
        "'def'",
        "'var'",
        "'control'",
        "'input'",
        "'param'",
        "'output'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'pseudo'",
        "'state'",
        "'enter'",
        "'exit'",
        "'during'",
        "'before'",
        "'after'",
        "'abstract'",
        "'ref'",
        "'effect'",
        "'if'",
        "'else'",
        "'int'",
        "'float'",
        "'pi'",
        "'E'",
        "'tau'",
        "'and'",
        "'or'",
        "'not'",
        "'implies'",
        "'iff'",
        "'xor'",
        "'[*]'",
        "'[H*]'",
        "'[H]'",
        "'**'",
        "'>>'",
        "'<<'",
        "'<='",
        "'>='",
        "'=='",
        "'!='",
        "'&&'",
        "'||'",
        "'=>'",
        "':='",
        "'::'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'['",
        "']'",
        "'('",
        "')'",
        "'?'",
        "':'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'!'",
        "'+'",
        "'-'",
        "'%'",
        "'&'",
        "'^'",
        "'|'",
        "'<'",
        "'>'",
        "'='",
    ]

    symbolicNames = [
        "<INVALID>",
        "IMPORT",
        "DEF",
        "VAR",
        "CONTROL",
        "INPUT",
        "PARAM",
        "OUTPUT",
        "EVENT",
        "AS",
        "NAMED",
        "PSEUDO",
        "STATE",
        "ENTER",
        "EXIT",
        "DURING",
        "BEFORE",
        "AFTER",
        "ABSTRACT",
        "REF",
        "EFFECT",
        "IF",
        "ELSE",
        "INT_TYPE",
        "FLOAT_TYPE",
        "PI_CONST",
        "E_CONST",
        "TAU_CONST",
        "AND_KW",
        "OR_KW",
        "NOT_KW",
        "IMPLIES_KW",
        "IFF_KW",
        "XOR_KW",
        "INIT_MARKER",
        "HISTORY_DEEP_MARKER",
        "HISTORY_SHALLOW_MARKER",
        "POW",
        "SHIFT_RIGHT",
        "SHIFT_LEFT",
        "LE",
        "GE",
        "EQ",
        "NE",
        "LOGICAL_AND",
        "LOGICAL_OR",
        "IMPLIES",
        "DECLARE_ASSIGN",
        "COLONCOLON",
        "ARROW",
        "SEMI",
        "COMMA",
        "LBRACE",
        "RBRACE",
        "LBRACK",
        "RBRACK",
        "LPAREN",
        "RPAREN",
        "QUESTION",
        "COLON",
        "DOT",
        "SLASH",
        "STAR",
        "BANG",
        "PLUS",
        "MINUS",
        "PERCENT",
        "AMP",
        "CARET",
        "PIPE",
        "LT",
        "GT",
        "ASSIGN",
        "FLOAT",
        "HEX_INT",
        "INT",
        "TRUE",
        "FALSE",
        "UFUNC_NAME",
        "ID",
        "STRING",
        "MULTILINE_COMMENT",
        "UNTERMINATED_MULTILINE_COMMENT",
        "LINE_COMMENT",
        "PYTHON_COMMENT",
        "WS",
        "IMPORT_HEADER_WS",
        "IMPORT_HEADER_MULTILINE_COMMENT",
        "IMPORT_HEADER_LINE_COMMENT",
        "IMPORT_HEADER_PYTHON_COMMENT",
        "IMPORT_BLOCK_WS",
        "IMPORT_BLOCK_MULTILINE_COMMENT",
        "IMPORT_BLOCK_LINE_COMMENT",
        "IMPORT_BLOCK_PYTHON_COMMENT",
        "IMPORT_DEF_SELECTOR_WS",
        "IMPORT_DEF_SELECTOR_MULTILINE_COMMENT",
        "IMPORT_DEF_SELECTOR_LINE_COMMENT",
        "IMPORT_DEF_SELECTOR_PYTHON_COMMENT",
        "IMPORT_DEF_SELECTOR_PATTERN",
        "IMPORT_DEF_TARGET_WS",
        "IMPORT_DEF_TARGET_MULTILINE_COMMENT",
        "IMPORT_DEF_TARGET_LINE_COMMENT",
        "IMPORT_DEF_TARGET_PYTHON_COMMENT",
        "IMPORT_DEF_TARGET_TEMPLATE",
    ]

    RULE_condition = 0
    RULE_state_machine_dsl = 1
    RULE_def_assignment = 2
    RULE_variable_declaration = 3
    RULE_state_definition = 4
    RULE_transition_definition = 5
    RULE_entry_combo_transition_trigger = 6
    RULE_entry_chain_combo_trigger = 7
    RULE_entry_chain_combo_leading_guard = 8
    RULE_entry_chain_combo_trigger_term = 9
    RULE_combo_transition_trigger = 10
    RULE_local_combo_trigger = 11
    RULE_local_combo_leading_guard = 12
    RULE_local_combo_trigger_term = 13
    RULE_local_combo_event_term = 14
    RULE_chain_combo_trigger = 15
    RULE_chain_combo_guard_alias = 16
    RULE_combo_trigger_term = 17
    RULE_combo_event_term = 18
    RULE_combo_guard_term = 19
    RULE_transition_force_definition = 20
    RULE_history_marker = 21
    RULE_history_definition = 22
    RULE_history_default_path = 23
    RULE_enter_definition = 24
    RULE_exit_definition = 25
    RULE_during_definition = 26
    RULE_during_aspect_definition = 27
    RULE_event_definition = 28
    RULE_import_statement = 29
    RULE_import_mapping_statement = 30
    RULE_import_variable_mapping = 31
    RULE_import_def_selector = 32
    RULE_import_def_target_template = 33
    RULE_import_event_mapping = 34
    RULE_operation_assignment = 35
    RULE_operation_block = 36
    RULE_if_statement = 37
    RULE_operational_statement = 38
    RULE_operational_statement_set = 39
    RULE_state_inner_statement = 40
    RULE_operation_program = 41
    RULE_preamble_program = 42
    RULE_preamble_statement = 43
    RULE_initial_assignment = 44
    RULE_constant_definition = 45
    RULE_operational_assignment = 46
    RULE_generic_expression = 47
    RULE_init_expression = 48
    RULE_num_expression = 49
    RULE_cond_expression = 50
    RULE_num_literal = 51
    RULE_bool_literal = 52
    RULE_math_const = 53
    RULE_chain_id = 54

    ruleNames = [
        "condition",
        "state_machine_dsl",
        "def_assignment",
        "variable_declaration",
        "state_definition",
        "transition_definition",
        "entry_combo_transition_trigger",
        "entry_chain_combo_trigger",
        "entry_chain_combo_leading_guard",
        "entry_chain_combo_trigger_term",
        "combo_transition_trigger",
        "local_combo_trigger",
        "local_combo_leading_guard",
        "local_combo_trigger_term",
        "local_combo_event_term",
        "chain_combo_trigger",
        "chain_combo_guard_alias",
        "combo_trigger_term",
        "combo_event_term",
        "combo_guard_term",
        "transition_force_definition",
        "history_marker",
        "history_definition",
        "history_default_path",
        "enter_definition",
        "exit_definition",
        "during_definition",
        "during_aspect_definition",
        "event_definition",
        "import_statement",
        "import_mapping_statement",
        "import_variable_mapping",
        "import_def_selector",
        "import_def_target_template",
        "import_event_mapping",
        "operation_assignment",
        "operation_block",
        "if_statement",
        "operational_statement",
        "operational_statement_set",
        "state_inner_statement",
        "operation_program",
        "preamble_program",
        "preamble_statement",
        "initial_assignment",
        "constant_definition",
        "operational_assignment",
        "generic_expression",
        "init_expression",
        "num_expression",
        "cond_expression",
        "num_literal",
        "bool_literal",
        "math_const",
        "chain_id",
    ]

    EOF = Token.EOF
    IMPORT = 1
    DEF = 2
    VAR = 3
    CONTROL = 4
    INPUT = 5
    PARAM = 6
    OUTPUT = 7
    EVENT = 8
    AS = 9
    NAMED = 10
    PSEUDO = 11
    STATE = 12
    ENTER = 13
    EXIT = 14
    DURING = 15
    BEFORE = 16
    AFTER = 17
    ABSTRACT = 18
    REF = 19
    EFFECT = 20
    IF = 21
    ELSE = 22
    INT_TYPE = 23
    FLOAT_TYPE = 24
    PI_CONST = 25
    E_CONST = 26
    TAU_CONST = 27
    AND_KW = 28
    OR_KW = 29
    NOT_KW = 30
    IMPLIES_KW = 31
    IFF_KW = 32
    XOR_KW = 33
    INIT_MARKER = 34
    HISTORY_DEEP_MARKER = 35
    HISTORY_SHALLOW_MARKER = 36
    POW = 37
    SHIFT_RIGHT = 38
    SHIFT_LEFT = 39
    LE = 40
    GE = 41
    EQ = 42
    NE = 43
    LOGICAL_AND = 44
    LOGICAL_OR = 45
    IMPLIES = 46
    DECLARE_ASSIGN = 47
    COLONCOLON = 48
    ARROW = 49
    SEMI = 50
    COMMA = 51
    LBRACE = 52
    RBRACE = 53
    LBRACK = 54
    RBRACK = 55
    LPAREN = 56
    RPAREN = 57
    QUESTION = 58
    COLON = 59
    DOT = 60
    SLASH = 61
    STAR = 62
    BANG = 63
    PLUS = 64
    MINUS = 65
    PERCENT = 66
    AMP = 67
    CARET = 68
    PIPE = 69
    LT = 70
    GT = 71
    ASSIGN = 72
    FLOAT = 73
    HEX_INT = 74
    INT = 75
    TRUE = 76
    FALSE = 77
    UFUNC_NAME = 78
    ID = 79
    STRING = 80
    MULTILINE_COMMENT = 81
    UNTERMINATED_MULTILINE_COMMENT = 82
    LINE_COMMENT = 83
    PYTHON_COMMENT = 84
    WS = 85
    IMPORT_HEADER_WS = 86
    IMPORT_HEADER_MULTILINE_COMMENT = 87
    IMPORT_HEADER_LINE_COMMENT = 88
    IMPORT_HEADER_PYTHON_COMMENT = 89
    IMPORT_BLOCK_WS = 90
    IMPORT_BLOCK_MULTILINE_COMMENT = 91
    IMPORT_BLOCK_LINE_COMMENT = 92
    IMPORT_BLOCK_PYTHON_COMMENT = 93
    IMPORT_DEF_SELECTOR_WS = 94
    IMPORT_DEF_SELECTOR_MULTILINE_COMMENT = 95
    IMPORT_DEF_SELECTOR_LINE_COMMENT = 96
    IMPORT_DEF_SELECTOR_PYTHON_COMMENT = 97
    IMPORT_DEF_SELECTOR_PATTERN = 98
    IMPORT_DEF_TARGET_WS = 99
    IMPORT_DEF_TARGET_MULTILINE_COMMENT = 100
    IMPORT_DEF_TARGET_LINE_COMMENT = 101
    IMPORT_DEF_TARGET_PYTHON_COMMENT = 102
    IMPORT_DEF_TARGET_TEMPLATE = 103

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ConditionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_expression(self):
            return self.getTypedRuleContext(GrammarParser.Cond_expressionContext, 0)

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_condition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCondition"):
                listener.enterCondition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCondition"):
                listener.exitCondition(self)

    def condition(self):

        localctx = GrammarParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.cond_expression(0)
            self.state = 111
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class State_machine_dslContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def state_definition(self):
            return self.getTypedRuleContext(GrammarParser.State_definitionContext, 0)

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def def_assignment(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.Def_assignmentContext)
            else:
                return self.getTypedRuleContext(GrammarParser.Def_assignmentContext, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_state_machine_dsl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterState_machine_dsl"):
                listener.enterState_machine_dsl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitState_machine_dsl"):
                listener.exitState_machine_dsl(self)

    def state_machine_dsl(self):

        localctx = GrammarParser.State_machine_dslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_state_machine_dsl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 113
                    self.def_assignment()
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

            self.state = 119
            self.state_definition()
            self.state = 120
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Def_assignmentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.leading_doc = None  # Token
            self.deftype = None  # Token
            self.var_name = None  # Token

        def variable_declaration(self):
            return self.getTypedRuleContext(
                GrammarParser.Variable_declarationContext, 0
            )

        def SEMI(self):
            return self.getToken(GrammarParser.SEMI, 0)

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def INT_TYPE(self):
            return self.getToken(GrammarParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(GrammarParser.FLOAT_TYPE, 0)

        def ASSIGN(self):
            return self.getToken(GrammarParser.ASSIGN, 0)

        def init_expression(self):
            return self.getTypedRuleContext(GrammarParser.Init_expressionContext, 0)

        def MULTILINE_COMMENT(self):
            return self.getToken(GrammarParser.MULTILINE_COMMENT, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_def_assignment

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDef_assignment"):
                listener.enterDef_assignment(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDef_assignment"):
                listener.exitDef_assignment(self)

    def def_assignment(self):

        localctx = GrammarParser.Def_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_def_assignment)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GrammarParser.MULTILINE_COMMENT:
                self.state = 122
                localctx.leading_doc = self.match(GrammarParser.MULTILINE_COMMENT)

            self.state = 125
            self.variable_declaration()
            self.state = 126
            localctx.deftype = self._input.LT(1)
            _la = self._input.LA(1)
            if not (_la == GrammarParser.INT_TYPE or _la == GrammarParser.FLOAT_TYPE):
                localctx.deftype = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 127
            localctx.var_name = self.match(GrammarParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GrammarParser.ASSIGN:
                self.state = 128
                self.match(GrammarParser.ASSIGN)
                self.state = 129
                self.init_expression(0)

            self.state = 132
            self.match(GrammarParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_declarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(GrammarParser.DEF, 0)

        def CONTROL(self):
            return self.getToken(GrammarParser.CONTROL, 0)

        def INPUT(self):
            return self.getToken(GrammarParser.INPUT, 0)

        def PARAM(self):
            return self.getToken(GrammarParser.PARAM, 0)

        def OUTPUT(self):
            return self.getToken(GrammarParser.OUTPUT, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_variable_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariable_declaration"):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariable_declaration"):
                listener.exitVariable_declaration(self)

    def variable_declaration(self):

        localctx = GrammarParser.Variable_declarationContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_variable_declaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << GrammarParser.DEF)
                        | (1 << GrammarParser.CONTROL)
                        | (1 << GrammarParser.INPUT)
                        | (1 << GrammarParser.PARAM)
                        | (1 << GrammarParser.OUTPUT)
                    )
                )
                != 0
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class State_definitionContext(ParserRuleContext):
        __slots__ = "parser"
